fix create chat popover positioning on small screens

--- a/src/components/ChatList/CreateChatButton/index.scss
+++ b/src/components/ChatList/CreateChatButton/index.scss
@@ -27,5 +27,8 @@
         margin-bottom: 20px;
       }
     }
+    @media only screen and (max-width: 476px) {
+      right: 0;
+    }
   }
 }
